@@ -317,6 +317,7 @@
 
 #define __NR_execveat		354
 
+#define __NR_userfaultfd		355
 #define __NR_membarrier			356
 #define __NR_recvmmsg			357
 #define __NR_sendmmsg			358
